wk_taa_taaqa/src/objects/Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item_Description__c</fullName>
        <label>Action Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Item_Type__c</fullName>
        <label>Action Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To-Do</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Design Review</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>User Guide</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_History__c</fullName>
        <inlineHelpText>Used for notes and outcome on the action item.</inlineHelpText>
        <label>Comments/History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - Regular</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Requests__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Risk_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Risk/Issue</label>
        <referenceTo>Risk_Issue__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <inlineHelpText>If this action item is being driven by someone outside of the Core team, enter their name here.</inlineHelpText>
        <label>Secondary Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#CC0000</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#006600</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action Item</label>
    <listViews>
        <fullName>All_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Description__c</columns>
        <columns>Action_Item_Type__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,On Hold</value>
        </filters>
        <label>All Open Action Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Past_Due_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Description__c</columns>
        <columns>Action_Item_Type__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,On Hold</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Past Due Action Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Description__c</columns>
        <columns>Action_Item_Type__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,On Hold</value>
        </filters>
        <label>My Open Action Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Past_Due_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Action_Item_Description__c</columns>
        <columns>Action_Item_Type__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,On Hold</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Past Due Action Items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>Action Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>